# DosageConvertor

./: CMakeLists.txt  ChangeLog  Makefile.inc  README.md  README.txt  install.sh
src/: HaplotypeSet.cpp  HaplotypeSet.h  Main.cpp  Makefile
test/: TestDataImputedVCF.info
